# GPU-Zen-2-Baker

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  license.md  readme.md
assets/models/: brick-cube-high.fbx  brick-cube-low.fbx  brick-cube.blend  brick-cube.blend1
assets/shaders/: BakeAmbientOcclusion.frag  BakeHeight.frag  BakeNormals.frag  MaterialVertexColor.frag  MaterialVertexColor.vert
src/: XMain.cpp
src/Engine/: Engine.cpp  Engine.h
src/Engine/Actors/: Baker.cpp  Baker.h  Camera.cpp  Camera.h
src/Engine/Core/: Actor.cpp  Actor.h  Component.h  EngineDesc.h  GUI.cpp  GUI.h  IMiddleware.cpp  IMiddleware.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Utils.h
src/Engine/Middleware/: Core.cpp  Core.h
